<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="bindPostViewModel"
            type="com.victorizzie.android.apps.jsonplaceholder.viewmodel.PostDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/act_post_edit_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/act_post_edit_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/act_post_edit_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/act_post_edit_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/act_post_edit_modify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:modifyPost="@{bindPostViewModel}" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/act_post_edit_title_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/act_post_edit_app_bar" />

        <EditText
            android:id="@+id/act_post_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="3"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="@dimen/padding"
            android:text="@={bindPostViewModel.title}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toBottomOf="@id/act_post_edit_title_hint"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/act_post_edit_body_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/act_post_edit_title" />

        <EditText
            android:id="@+id/act_post_edit_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="@dimen/padding"
            android:text="@={bindPostViewModel.body}"
            app:layout_constraintTop_toBottomOf="@id/act_post_edit_body_hint"
            tools:ignore="LabelFor,TextFields" />

        <ProgressBar
            android:id="@+id/act_post_edit_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{bindPostViewModel.dataLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>